minikube/kafka-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-server-service
  namespace: spring-cloud
  labels:
    app: kafka-server
spec:
  type: LoadBalancer
  ports:
    - name: '9092'
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: spring-cloud
  labels:
    app: kafka-server
spec:
  serviceName: kafka-server-service
  replicas: 3
  selector:
    matchLabels:
      app: kafka-server
  template:
    metadata:
      labels:
        app: kafka-server
    spec:
      containers:
        - name: kafka-server-container
          image: doughgle/kafka-kraft:latest
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: data
              mountPath: /mnt/kafka
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
