minikube/kafka-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: spring-cloud
spec:
  ports:
    - port: 8080
  selector:
    app: kafka-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
  namespace: spring-cloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui-container
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: kafka-ui
