minikube/pg-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-server-service
  namespace: spring-cloud
  labels:
    app: pg-server
spec:
  type: NodePort
  ports:
    - name: '5432'
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: pg-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-server-deployment
  namespace: spring-cloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pg-server
    spec:
      containers:
        - name: pg-server-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: pg-server-pv-claim
  selector:
    matchLabels:
      app: pg-server
