minikube/zipkin-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server-service
  namespace: spring-cloud
  labels:
    app: zipkin-server
spec:
  ports:
    - port: 9411
  selector:
    app: zipkin-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server-deployment
  namespace: spring-cloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
        - name: zipkin-server-container
          image: openzipkin/zipkin:latest
          ports:
            - containerPort: 9411
  selector:
    matchLabels:
      app: zipkin-server
